--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,12 @@ futures-core = "0.3.24"
 http = "0.2.8"
 http-body = "0.4.5"
 httparse = "1.8.0"
-reqwest = { version = "0.11.12", default-features = false }
+
 thiserror = "1.0.37"
-tonic = { version = "0.8.2", default-features = false }
+tonic = { version = "0.8.2", default-features = false, features = ["codegen", "prost"] }
 tower = { version = "0.4.13", default-features = false }
 wee_alloc = { version = "0.4.5", optional = true }
+ureq = { version = "2.5.0", default-features = false, features = ["json", "charset", "cookies", "gzip"] }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.33"
